--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@nx/next": "^17.2.7",
     "@nx/react": "^17.2.7",
     "@nx/react-native": "^17.2.8",
-    "@nx/web": "17.2.7",
+    "@nx/storybook": "17.2.8",
+    "@nx/web": "17.2.8",
     "@nx/webpack": "17.2.7",
     "@nx/workspace": "17.2.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
@@ -61,6 +62,14 @@
     "@react-native-community/cli-platform-ios": "11.3.7",
     "@react-native/metro-config": "^0.72.11",
     "@schematics/angular": "~17.0.0",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "^7.5.3",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-webpack5": "^7.5.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.6.7",
     "@swc/cli": "~0.1.62",
