--- a/apps/next-mf/project.json
+++ b/apps/next-mf/project.json
@@ -89,6 +89,49 @@
       "options": {
         "jestConfig": "apps/next-mf/jest.config.ts"
       }
+    },
+    "storybook": {
+      "executor": "@nx/storybook:storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/next-mf/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@nx/storybook:build",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/next-mf",
+        "configDir": "apps/next-mf/.storybook"
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/next-mf/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "options": {
+        "buildTarget": "next-mf:build-storybook",
+        "staticFilePath": "dist/storybook/next-mf"
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "next-mf:build-storybook:ci"
+        }
+      }
     }
   },
   "tags": []
